# notepod

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx  test-editor.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: backup.rs  export.rs  folder.rs  git.rs  git2_ops.rs  gix_ops.rs  lock.rs  mod.rs  note.rs  query.rs  system.rs  tag.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/db/repo/: mod.rs  note_repo.rs  query_repo.rs  tag_repo.rs
src/components/DailyView/: DailyHeader.tsx  DailyTimeline.tsx
src/components/Editor/: Editor.tsx
src/components/Editor/MetaPanel/: MetaPanel.tsx
src/components/Editor/ProseMirrorEditor/: ProseMirrorEditor.css  ProseMirrorEditor.tsx  markdown-serializer.ts  (+1 more)
src/components/GraphView/: GraphView.tsx
src/components/Layout/: AppleModal.tsx  CollapsiblePanel.tsx  GitBackupModal.tsx  LockOverlay.tsx  LockScreenModal.tsx
src/components/Mobile/: BottomTabBar.tsx  MobileDrawer.tsx  MobileHeader.tsx  MobileLayout.tsx
src/components/NoteList/: NoteList.tsx
src/components/QueryPanel/: QueryPanel.tsx
src/components/Setup/: EncryptionWizard.tsx
src/components/Sidebar/: ActivityHeatmap.tsx  Sidebar.tsx
src/components/Toolbar/: Toolbar.tsx
src/hooks/: useIsMobile.ts  useLayout.ts
src/lib/: blocks.ts  dateUtils.ts  query.ts  tauri.ts  wikiLinks.ts
src/stores/: encStore.ts  notesStore.ts  queryStore.ts  uiStore.ts
src/styles/: globals.css
(+6 files in other folders)
