[package]
name = "notepod"
version = "1.0.0"
description = "NotePod - Rust + Tauri Note App"
authors = ["NotePod"]
edition = "2021"
default-run = "notepod"

[lib]
name = "notepod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "encrypt_db"
path = "src/bin/encrypt_db.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
regex = "1"

# Git 备份 — gix (纯 Rust，全平台含 Android)
gix = { version = "0.75", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "credentials",
    "revision",
    "index",
    "max-performance-safe",
    "worktree-mutation",
] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
hex = "0.4"
flate2 = "1"
sha1 = "0.10"

# 桌面端专属插件
[target.'cfg(not(target_os = "android"))'.dependencies]
git2 = { version = "0.18", features = ["https"] }
tauri-plugin-global-shortcut = "2"
